syntax = "proto3";

package heimdall.types;

import "gogoproto/gogo.proto";

option go_package = "github.com/maticnetwork/heimdall/types";

option (gogoproto.sizer_all)       = true;
option (gogoproto.marshaler_all)   = true;
option (gogoproto.unmarshaler_all) = true;

message QueryPaginationParams {
    option (gogoproto.goproto_getters) = false;

    uint64 page  = 1;
    uint64 limit = 2;
}
